# serviette

./: .travis.yml  Application.hs  Main.hs  README.md  serviette.cabal  stack.yaml
Data/: ApiDataTypes.hs  Serviette.hs
mysql-yesod-example/: README.md  serviette.cabal
mysql-yesod-example/Handler/: ApiDataTypes.hs
serviette/: Application.hs  Foundation.hs  serviette.cabal
serviette-0.1.0.0/src/: ApiDataTypes.hs  Serviette.hs
serviette-0.1.0.1/: README.md  serviette.cabal
serviette-0.1.0.2/Data/: ApiDataTypes.hs
serviette-0.1.0.3/Data/: Serviette.hs
serviette-0.1.0.4/Data/: ApiDataTypes.hs
serviette-0.1.0.5/Data/: ApiDataTypes.hs
serviette/.stack-work/install/x86_64-osx/lts-8.18/8.0.2/lib/x86_64-osx-ghc-8.0.2/serviette-0.1.0.0-8McLkYghy5C7I7lKW8Zesi/: Lib.dyn_hi  Lib.hi
serviette/.stack-work/install/x86_64-osx/lts-8.18/8.0.2/pkgdb/: package.cache  serviette-0.1.0.0-8McLkYghy5C7I7lKW8Zesi.conf
serviette/.stack-work/intero/intero1700VTl/: Lib.hi
serviette/Handler/: Api.hs  ApiDataTypes.hs  Home.hs
serviette/app/: Main.hs
serviette/config/: settings.yml
serviette/src/: Api.hs  ApiDataTypes.hs  Config.hs  DBConnect.hs  Lib.hs  Models.hs  Serviette.hs
serviette/src/api/: Sql.hs  Sqldata.hs  User.hs
src/: Serviette.hs
test/: ServietteTest.hs  delete_data.json  insert_data.json  select_data.json
