name:                serviette
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/v0d1ch/serviette#readme
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          brutallesale@gmail.com
copyright:           2017 Sasa Bogicevic
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DbConnect
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , filepath 
                     , servant-js
                     , persistent 
                     , persistent-template 
                     , persistent-postgresql
                     , monad-logger >= 0.3.20.2 
                     , mtl
                     , transformers

  default-language:    Haskell2010

executable serviette-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , serviette
  default-language:    Haskell2010

test-suite serviette-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serviette
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/v0d1ch/serviette
