name:                serviette
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/v0d1ch/serviette#readme
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic 
maintainer:          brutallesale@gmail.com
copyright:           2017 Sasa Bogicevic
 category:           Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Serviette 
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring                    >= 0.9        && < 0.11
                     , text                          >= 0.11       && < 2.0
                     , generic-deriving
                     , protolude



  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/v0d1ch/serviette
